Enhance PayrollApplicationTest with additional tests for tax calculation and overtime handling